--- a/onecard/index.html
+++ b/onecard/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <nav class="navbar">
+    <nav class="navbar">
+        <div class="container">
             <div class="img"></div>
             <div class="nav_anchors">
                 <a href="#">Home</a>
@@ -20,9 +20,11 @@
                 <a href="#">Career</a>
                 <button class="header_button">Apply</button>
             </div>
-        </nav>
+        </div>
+    </nav>
 
-        <section class="hero_section">
+    <main>
+        <div class="hero_section">
             <div class="left_part">
                 <p class="p1">Say Hi to</p>
                 <p class="p2">One Credit Card</p>
@@ -39,7 +41,7 @@
             <div class="right_part">
                 <video src="hero frame video.mp4" autoplay muted loop></video>
             </div>
-        </section>
+        </div>
 
         <div class="fees">
             <h1 class="head">No Hidden Fees Ever.</h1>
@@ -133,14 +135,15 @@
             <h1>Investors</h1>
             <p>We are backed by marquee investors who share our vision, passion, and commitment to first principles.</p>
             <div class="investors_logo">
-                <img src="peakXV1.svg">
-                <img src="hummingbird1.svg">
-                <img src="QED1.svg">
-                <img src="z471p.svg">
+                <img src="peakXV1.svg" class="peakXV1">
+                <img src="hummingbird1.svg" class="hummingbird1">
+                <img src="QED1.svg" class="QED1">
+                <img src="z471p.svg" class="z471p">
             </div>
         </div>
 
-    </div>
+    </main>
+
 
     <footer>
         <img src="OneCard_Logo_OneCard_Logo_2.png" alt="onecard_logo" class="onecard_logo">
