Added @media (max-width: 1120px) for responsive design. for rode-website

--- a/rode website/index.html
+++ b/rode website/index.html
@@ -6,12 +6,15 @@
     <title>RØDE Replica</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
-</head>
 <body>
     <header class="navbar">
         <div class="navbarcontainer">
             <div class="logo">
                 RØDE
+            </div>
+
+            <div class="hamburger">
+                <i class="fa-regular fa-bars"></i>
             </div>
 
             <nav class="container">
@@ -162,12 +165,8 @@
                 <h1>Subscribe to our latest news and offers</h1>
                 <button>Subscribe</button>
             </div>
-
         </nav>
-
-
     </footer>
-
     
 </body>
 </html>
